tests/baselines/reference/twoGenericInterfacesWithTheSameNameButDifferentArity.errors.txt
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(1,11): error TS2428: All declarations of 'A' must have identical type parameters.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(5,11): error TS2428: All declarations of 'A' must have identical type parameters.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(10,15): error TS2428: All declarations of 'A' must have identical type parameters.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(14,15): error TS2428: All declarations of 'A' must have identical type parameters.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(25,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(31,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(32,22): error TS2428: All declarations of 'A' must have identical type parameters.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoGenericInterfacesWithTheSameNameButDifferentArity.ts(38,22): error TS2428: All declarations of 'A' must have identical type parameters.


==== twoGenericInterfacesWithTheSameNameButDifferentArity.ts (11 errors) ====
    interface A<T> {
              ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
        x: T;
    }
    
    interface A<T, U> { // error
              ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
        y: T;
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
                  ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            x: T;
        }
    
        interface A<T, U> { // error
                  ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            y: T;
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T, U> { // ok, different declaration space than other M2
            y: T;
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T> {
                         ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            x: T;
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T, U> { // error
                         ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            y: T;
        }
    }